--- a/SharedScans.Interfaces/SharedScans.Interfaces.csproj
+++ b/SharedScans.Interfaces/SharedScans.Interfaces.csproj
@@ -1,10 +1,23 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>net8.0</TargetFramework>
+    <TargetFrameworks>net7.0;net8.0</TargetFrameworks>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+	<GenerateDocumentationFile>true</GenerateDocumentationFile>
+	<Version>1.1.0</Version>
+	<Authors>RyoTune</Authors>
+	<Description>Reloaded II mod API for easily sharing sigscans and hooks between mods.</Description>
+	<RepositoryUrl>https://github.com/RyoTune/SharedScans</RepositoryUrl>
+	<PackageReadmeFile>README.md</PackageReadmeFile>
   </PropertyGroup>
+
+  <ItemGroup>
+    <None Include="..\README.md">
+      <Pack>True</Pack>
+      <PackagePath>\</PackagePath>
+    </None>
+  </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="Reloaded.Hooks.Definitions" Version="1.15.0" />
