--- a/SharedScans.Reloaded/ModConfig.json
+++ b/SharedScans.Reloaded/ModConfig.json
@@ -1,8 +1,8 @@
 {
   "ModId": "SharedScans.Reloaded",
   "ModName": "Shared Scans",
-  "ModAuthor": "zutomayofan50",
-  "ModVersion": "1.2.0",
+  "ModAuthor": "RyoTune",
+  "ModVersion": "1.2.1",
   "ModDescription": "Utility library for streamlining sharing scans between mods.",
   "ModDll": "SharedScans.Reloaded.dll",
   "ModIcon": "Preview.png",
@@ -11,22 +11,13 @@
   "ModNativeDll32": "",
   "ModNativeDll64": "",
   "Tags": [],
-  "CanUnload": null,
+  "CanUnload": false,
   "HasExports": true,
   "IsLibrary": true,
   "ReleaseMetadataFileName": "SharedScans.Reloaded.ReleaseMetadata.json",
   "PluginData": {
     "GitHubDependencies": {
       "IdToConfigMap": {
-        "reloaded.sharedlib.hooks": {
-          "Config": {
-            "UserName": "Sewer56",
-            "RepositoryName": "Reloaded.SharedLib.Hooks.ReloadedII",
-            "UseReleaseTag": true,
-            "AssetFileName": "reloaded.sharedlib.hooks.zip"
-          },
-          "ReleaseMetadataName": "Sewer56.Update.ReleaseMetadata.json"
-        },
         "Reloaded.Memory.SigScan.ReloadedII": {
           "Config": {
             "UserName": "Reloaded-Project",
@@ -35,12 +26,27 @@
             "AssetFileName": "Mod.zip"
           },
           "ReleaseMetadataName": "Reloaded.Memory.SigScan.ReloadedII.ReleaseMetadata.json"
+        },
+        "reloaded.sharedlib.hooks": {
+          "Config": {
+            "UserName": "Sewer56",
+            "RepositoryName": "Reloaded.SharedLib.Hooks.ReloadedII",
+            "UseReleaseTag": true,
+            "AssetFileName": "reloaded.sharedlib.hooks.zip"
+          },
+          "ReleaseMetadataName": "Sewer56.Update.ReleaseMetadata.json"
         }
       }
     },
     "GameBanana": {
       "ItemType": "Mod",
       "ItemId": 495507
+    },
+    "GitHubRelease": {
+      "UserName": "RyoTune",
+      "RepositoryName": "SharedScans",
+      "UseReleaseTag": false,
+      "AssetFileName": "Mod.zip"
     }
   },
   "IsUniversalMod": true,
